# ml-serving-webpage

./: README.md  pyproject.toml
backend/: config.yaml  constants.py  container.py  main.py  postman_collection.json  pyproject.toml
backend/application/: service.py
backend/domain/: ab_sentiment_classifier.py  model.py  repository.py
backend/infrastructure/classifier/: sentiment_classifier.py
backend/infrastructure/repository/: in_mem_repository.py
backend/presentation/: controller.py  req_res_objects.py
backend/text_sentiment_classifier/: model.py
