[tool.poetry]
name = "ml-serving-web-page"
version = "0.1.0"
description = ""
authors = ["socar-serena <serena@socar.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
